--- a/LE/task4.html
+++ b/LE/task4.html
@@ -90,7 +90,7 @@
 <div class="background">
     <div class="top1">
         <a href=" http://www.baidu.com" style="text-decoration: none;color:#ffffff;position:absolute;top:17px;left: 15px;">关闭</a>
-        <p style="position:absolute;color: #ffffff;font-size:16px;top:17px;left:50%;">登录</p>
+        <p style="color: #ffffff;font-size:16px;top:17px;text-align: center;padding-top:16.5px;">登录</p>
        <a href="https://www.iqiyi.com/" style="text-decoration: none;color:#ffffff;position: absolute;top:17px;right: 15px;"> 注册</a>
     </div>
 <label for="male">
@@ -106,7 +106,7 @@
         <form><input type="password" id="max" class="for" placeholder="请输入密码"></form></div></label>
     <label for="mal">
         <div class="top4">
-        <button type="button" id="mal"  type="submit" style="color:#ffffff;font-size:18px;border:0;background-color: transparent;position: absolute;top:12px;left:47%;"><a href=" https://www.bilibili.com/" style="text-decoration: none;color:#ffffff;"> 登&nbsp;录</a></button>
+        <button type="button" id="mal"  type="submit" style="color:#ffffff;font-size:18px;border:0;background-color: transparent;top:12px;display:block;margin:0 auto;padding-top:16px;"><a href=" https://www.bilibili.com/" style="text-decoration: none;color:#ffffff;"> 登&nbsp;录</a></button>
       </label>
        <a href=" https://im.qq.com/" style="text-decoration: none;color:#5fc0cd;position: absolute;right:15px;top:70px;">忘记密码</a></p>
 </div>
