--- a/css/task3/task3.html
+++ b/css/task3/task3.html
@@ -18,21 +18,23 @@
         }
 
         .box2 {
+
             padding-top: 6%;
+            margin:0 auto;
             text-align: center;
         }
 
         .box3{
             float: left;
-            padding-top: 15%;
-            padding-left: 30%;
+            padding-top: 25%;
+            padding-left: 20%;
             color: rgb(241, 250, 252);
             font-size: 15px;
         }
         .box4{
             float:right;
-            padding-top: 15%;
-            padding-right: 30%;
+            padding-top: 25%;
+            padding-right: 20%;
             color: rgb(241, 250, 252);
             font-size: 15px;
         }
@@ -42,6 +44,8 @@
             color: rgb(241, 250, 252);
             font-size: 15px;
             padding-top: 5%;
+            width:80%;
+            margin:0 auto;
             text-align: center;
         }
 
@@ -55,7 +59,7 @@ body{
 <body>
     <div class="content">
         <div class="box1"><img src="./img/zzz.png" alt="返回键" width="27px" height="27px"></div>
-        <div class="box2"><img src="./img/vvv.png" alt="整合透底"></div>
+        <div class="box2"><img src="./img/vvv.png" alt="整合透底" style=" width:90px;height:35px;"></div>
         <p class="text1">葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以线下聚会桌游道具为主。</p>
         <div class="box3"><img src="./img/ccc.png" alt="椭圆" width="40px" height="40px"><p>2222</p></div>
         <div class="box4"><img src="./img/xxxx.png" alt="椭圆1" width="40px" height="40px"><p>&nbsp;8888</p></div>
