--- a/LE/task4.html
+++ b/LE/task4.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>登录页</title>
     <style type="text/css">
-  *{
-      margin:0 auto;
-      padding:0 auto;
+  
+ body{margin:0 auto;
   }
- 
+  
   .background{
      
      height:100%;
