--- a/css/task5/task5.html
+++ b/css/task5/task5.html
@@ -8,8 +8,9 @@
     <style type="text/css">
  
 
-body {
-    margin:0;                                                      /*  清除边距   */
+body {                                                               /*  清除边距   */
+    margin:0; 
+                                                       
 }
 
 hr {
