--- a/css/task6/task6.html
+++ b/css/task6/task6.html
@@ -18,7 +18,7 @@
 <img  src="./img/location.png" alt="定位图标">    <!--页头右侧定位图标-->
 </div>                                 <!--页头结束-->
 <div class="opt">     <!--下拉框布置-->
-<div>
+<div class="box1">
 <select>
     <option value="volvo">所在地</option>
     <option value="saab">二次元</option>
@@ -26,7 +26,7 @@
     <option value="audi">菜市场</option>
 </select>
 </div>
-<div>
+<div class="box1">
 <select>
     <option value="volvo">食宿</option>
     <option value="saab">空气</option>
@@ -35,7 +35,7 @@
 </select>
 </div>
 
-<div>
+<div  class="box1">
 <select style="border-right: 0;">
     <option value="volvo">病人情况</option>
     <option value="saab">一切正常</option>
