--- a/css/task6/task6.html
+++ b/css/task6/task6.html
@@ -18,25 +18,23 @@
 <img  src="./img/location.png" alt="定位图标">    <!--页头右侧定位图标-->
 </div>                                 <!--页头结束-->
 <div class="opt">     <!--下拉框布置-->
-<div class="box1">
-<select>
+<select class="box1">
     <option value="volvo">所在地</option>
     <option value="saab">二次元</option>
     <option value="opel">童话世界</option>
     <option value="audi">菜市场</option>
 </select>
-</div>
-<div class="box1">
-<select>
+
+<select class="box1">
     <option value="volvo">食宿</option>
     <option value="saab">空气</option>
     <option value="opel">辟谷</option>
     <option value="audi">热爱自由</option>
 </select>
-</div>
 
-<div  class="box1">
-<select style="border-right: 0;">
+
+
+<select class="box1" style="border-right: 0;">
     <option value="volvo">病人情况</option>
     <option value="saab">一切正常</option>
     <option value="opel">状况良好</option>
