--- a/css/task7/task7.html
+++ b/css/task7/task7.html
@@ -34,7 +34,8 @@
     <p>有1133个用户正在玩此款游戏</p>
    
     <div class="move">
-    <div class="block4">                         <!--大盒子里第三个方块-->
+    <div class="block4">  
+                                                <!--大盒子里第三个方块-->
     <p class="text">猜词版</p>
     </div><img class="arrow1" src="./img/arrow.png" alt="箭头"></div>
     <p>有1133个用户正在玩此款游戏</p>
