--- a/css/task7/task3.html
+++ b/css/task7/task3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="taskthree.css" rel="stylesheet" type="text/css">
+    <link href="task3.css" rel="stylesheet" type="text/css">
     <title>Document</title>
 </head>
 <body>
