--- a/css/task7/task1.html
+++ b/css/task7/task1.html
@@ -27,20 +27,23 @@
 <div class="text">
 <span>捉鬼游戏</span>
 </div>
-
+<a href=" https://zhuchunyu1995.github.io/xzy/css/task7/task2.html">
 <div class="block1">
-<span class="text1">简化版</span>   
+<span class="text1">简化版</span>  
+</a> 
 </div>
 <p>有1133个用户正在玩此款游戏</p>
-
+<a href=" https://zhuchunyu1995.github.io/xzy/css/task7/task2.html">
 <div class="block2">
-<span class="text1">简化版</span>   
+<span class="text1">猜词版</span>   
 <img class="arrow" src="./img/arrow.png" alt="箭头">
+</a>
 </div>
 <p>有1133个用户正在玩此款游戏</p>
-
+<a href=" https://zhuchunyu1995.github.io/xzy/css/task7/task2.html">
 <div class="block2">
-<span class="text1">简化版</span>   
+<span class="text1">白痴版</span>   
+</a>
 </div>
 <p>有1133个用户正在玩此款游戏</p>
 <span class="spot"><li><li><li><li></span>
