--- a/css/task7/task3.html
+++ b/css/task7/task3.html
@@ -77,8 +77,8 @@
 
 <div class="footer">
 <div class="box4">
-<a href="https://www.baidu.com"><button type="button"  class="button" type="submit" >再来一局</button></a>
-<a href="https://www.apple.com/cn/?afid=p238%7C9YDjuZgc_mtid_18707vxu38484&cid=aos-cn-kwba-brand-bz"> 
+<a href="https://zhuchunyu1995.github.io/xzy/css/task7/task1.html"><button type="button"  class="button" type="submit" >再来一局</button></a>
+<a href="https://zhuchunyu1995.github.io/xzy/css/task7/task1.html"> 
 <button type="button"  class="button1" type="submit">上传并分享</button>
 </a>
 </div>
