--- a/css/task7/task2.html
+++ b/css/task7/task2.html
@@ -163,7 +163,9 @@
 </div> 
 </div>
 <div class="footer">   <!--页尾 固定定位-->
+<a href=" https://zhuchunyu1995.github.io/xzy/css/task7/task3.html">
 <button type="button"  class="button" type="submit">投死</button>
+</a>
 </div>                   <!--页尾 结束-->
 </div>
 </body>
