--- a/css/task7/任务7.html
+++ b/css/task7/任务7.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="task2.css" rel="stylesheet" type="text/css">
+    <link href="task.css" rel="stylesheet" type="text/css">
     <title>Document</title>
 </head>
 <body>
@@ -21,154 +21,171 @@
 <img class="play" src="./img/play.png" alt="播放图标">
 <audio class="MP3" src="./img/xzy.mp3" controls="controls">financial freedom</audio>
 </div>
-
-
-
-
 <div class="triangle">                                      <!--三角形-->
 </div>
 <p class="text1">点击得票数最多人的头像</p>
+
+
+
+
+
+
 <div class="choice">              <!--选择区第一行第一个-->
+<div class="box1">
+
 <div class="block">
 <div class="one">
-<span>水民</span>
+<span>平民</span>  
 </div>
 <div class="two">
-<span>1号</span>
+<span>1号</span>  
+</div>
+<img class="combination" src="./img/combination.png" alt="组合图标">
+</div>
+    
+    
+<div class="block">
+ <div class="one">
+<span>警察</span>      
+</div>
+<div class="two">
+<span>2号</span>  
 </div>
 <img class="combination" src="./img/combination.png" alt="组合图标">
 </div>
 
-<div class="block">             <!--选择区第一行第二个-->
+
+<div class="block">
 <div class="one">
-<span>水民</span>
+<span>帅哥</span>           
 </div>
 <div class="two">
-<span>2号</span>
+<span>3号</span>             
 </div>
 <img class="combination" src="./img/combination.png" alt="组合图标">
 </div>
 
 
-<div class="block">             <!--选择区第一行第三个-->
+<div class="block">
 <div class="one">
-<span>水民</span>
+<span>美女</span>                     
 </div>
 <div class="two">
-<span>3号</span>
+<span>4号</span>                    
 </div>
 <img class="combination" src="./img/combination.png" alt="组合图标">
 </div>
+
+<div class="block">
+<div class="one">
+<span>野兽</span>                           
+</div>
+<div class="two">
+<span>5号</span>                             
+</div>
+<img class="combination" src="./img/combination.png" alt="组合图标">
+</div>
+
+
+<div class="block">
+<div class="one">
+<span>怪物</span>                              
+</div>
+<div class="two">
+<span>6号</span>                             
+</div>
+<img class="combination" src="./img/combination.png" alt="组合图标">
+</div>
+
+
+<div class="block">
+<div class="one">
+<span>情圣</span>                              
+</div>
+<div class="two">
+<span>7号</span>                             
+</div>
+<img class="combination" src="./img/combination.png" alt="组合图标">
+</div>
+
+
+<div class="block">
+<div class="one">
+<span>赌王</span>                              
+</div>
+<div class="two">
+<span>8号</span>                             
+</div>
+<img class="combination" src="./img/combination.png" alt="组合图标">
+</div>
+
+<div class="block">
+<div class="one">
+<span>哪吒</span>                             
+</div>
+<div class="two">
+<span>9号</span>                            
+</div>
+<img class="combination" src="./img/combination.png" alt="组合图标">
+</div>
+
+
+<div class="block">
+<div class="one">
+<span>唐僧</span>                            
+</div>
+<div class="two">
+<span>10号</span>                            
+</div>
+<img class="combination" src="./img/combination.png" alt="组合图标">
+</div>
+
+
+<div class="block">
+<div class="one">
+<span>杀手</span>                              
+</div>
+<div class="two">
+<span>11号</span>                             
+</div>
+<img class="combination" src="./img/combination.png" alt="组合图标">
+</div>
+
+
+<div class="block">
+<div class="one">
+<span>刺客</span>                                
+</div>
+<div class="two">
+<span>12号</span>                              
+</div>
+<img class="combination" src="./img/combination.png" alt="组合图标">
+</div>
+
 </div>                         <!--选择区第一行结束-->
 
 
-<div class="choice1">              <!--选择区第二行第一个-->
-<div class="block">
-<div class="one">
-<span>水民</span>
-</div>
-<div class="two">
-<span>1号</span>
-</div>
-<img class="combination" src="./img/combination.png" alt="组合图标">
-</div>
-
-
-<div class="block">             <!--选择区第二行第二个-->
-<div class="one">
-<span>水民</span>
-</div>
-<div class="two">
-<span>2号</span>
-</div>
-<img class="combination" src="./img/combination.png" alt="组合图标">
-</div>
 
 
 
 
-<div class="block">             <!--选择区第二行第三个-->
-<div class="one">
-<span>水民</span>
-</div>
-<div class="two">
-<span>3号</span>
-</div>
-<img class="combination" src="./img/combination.png" alt="组合图标">
-</div>
-</div> 
 
-<div class="choice2">              <!--选择区第三行第一个-->
-<div class="block">
-<div class="one">
-<span>水民</span>
-</div>
-<div class="two">
-<span>1号</span>
-</div>
-<img class="combination" src="./img/combination.png" alt="组合图标">
-</div>
 
-<div class="block">             <!--选择区第三行第二个-->
-<div class="one">
-<span>水民</span>
-</div>
-<div class="two">
-<span>2号</span>
-</div>
-<img class="combination" src="./img/combination.png" alt="组合图标">
-</div>
 
-<div class="block">             <!--选择区第三行第三个-->
-<div class="one">
-<span>水民</span>
-</div>
-<div class="two">
-<span>3号</span>
-</div>
-<img class="combination" src="./img/combination.png" alt="组合图标">
-</div>
-</div> 
 
-<div class="choice3">              <!--选择区第四行第一个-->
-<div class="block">
-<div class="one">
-<span>水民</span>
-</div>
-<div class="two">
-<span>1号</span>
-</div>
-<img class="combination" src="./img/combination.png" alt="组合图标">
-</div>
 
-<div class="block">             <!--选择区第四行第二个-->
-<div class="one">
-<span>水民</span>
-</div>
-<div class="two">
-<span>2号</span>
-</div>
-<img class="combination" src="./img/combination.png" alt="组合图标">
-</div>
 
-<div class="block">             <!--选择区第四行第三个-->
-<div class="one">
-<span>水民</span>
-</div>
-<div class="two">
-<span>3号</span>
-</div>
-<img class="combination" src="./img/combination.png" alt="组合图标">
-</div>
-</div> 
-</div>
-<div class="between">
+
+
+<div class="box2">
+
 <div class="footer">   <!--页尾 固定定位-->
-<a href=" https://zhuchunyu1995.github.io/xzy/css/task7/task3.html">
 <button type="button"  class="button" type="submit">投死</button>
-</a>
-</div>   
-</div>                <!--页尾 结束-->
+</div>                   <!--页尾 结束-->
+</div>
+
+
+
 </div>
 </body>
 </html>
