--- a/css/task7/task1.html
+++ b/css/task7/task1.html
@@ -35,10 +35,10 @@
 <p>有1133个用户正在玩此款游戏</p>
 <a href=" https://zhuchunyu1995.github.io/xzy/css/task7/task2.html">
 <div class="block2">
-<span class="text1">猜词版</span>   
-<img class="arrow" src="./img/arrow.png" alt="箭头">
-</a>
+<span class="text1">猜词版</span>
+</a>   
 </div>
+<i class="triangle"></i>
 <p>有1133个用户正在玩此款游戏</p>
 <a href=" https://zhuchunyu1995.github.io/xzy/css/task7/task2.html">
 <div class="block2">
