--- a/css/task8/bbp.html
+++ b/css/task8/bbp.html
@@ -37,7 +37,7 @@
 .bt {
     font-size: 13px;
     margin-top: 15px;
-    margin-left: 150px;
+    text-align: center;
 }
    
 td {
@@ -45,7 +45,7 @@ td {
 }
 
 .red {
-    color: #f01400;
+   
     margin-left: 10px;
 }
 .red1 {
