--- a/css/task8/task1.html
+++ b/css/task8/task1.html
@@ -33,7 +33,6 @@
 
         <!--页眉结束-->
 
-
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <!-- 导航栏开始-->
             <div class=dhl>
@@ -47,6 +46,10 @@
                     </button>
 
                 </div>
+
+
+
+
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
@@ -62,10 +65,7 @@
                             <a class="nav-link" href="#">关&nbsp;于</a>
                         </li>
                     </ul>
-
-
                 </div>
-
             </div>
         </nav> <!-- 导航栏结束-->
 
@@ -195,8 +195,6 @@
             </div>
 
 
-
-
             <div class="col-12 col-sm-6 col-lg-3 ss1 ">
                 <div class="number">
                     <div class="circular">
@@ -224,7 +222,7 @@
                     </div>
                 </div>
                 <div class="f1">
-                    <span>查看职业目标任务</span>
+                    <span class="nn">查看职业目标任务</span>
                 </div>
 
                 <div>
@@ -244,7 +242,7 @@
         <div class="row" style="width: 77%;margin: 0 auto;margin-top: 5%;align-items: center;margin-bottom: 6%;">
             <!--第三列开始-->
 
-            <div class="col-12 col-sm-6 col-lg-3 s2 ">
+            <div class="col-12 col-sm-6 col-lg-3 s2  pq  old">
                 <div class="number">
                     <div class="circular">
                         <span>5</span>
@@ -261,7 +259,7 @@
             </div>
 
 
-            <div class="col-12 col-sm-6 col-lg-3 ss ">
+            <div class="col-12 col-sm-6 col-lg-3 ss  pq">
                 <div class="number">
                     <div class="circular">
                         <span>6</span>
@@ -298,14 +296,14 @@
 
 
 
-            <div class="col-12 col-sm-6 col-lg-3 ss  ss1 ">
+            <div class="col-12 col-sm-6 col-lg-3 ss  ss1   ">
                 <div class="number">
                     <div class="circular">
                         <span>8</span>
                     </div>
                 </div>
                 <div class="f1">
-                    <span>完成职业技能，升级职业大牛</span>
+                    <span class="nn">完成职业技能，升级职业大牛</span>
                 </div>
                 <div>
                     <p class="arrow"></p>
@@ -448,12 +446,6 @@
 
                     </div>
                 </div>
-
-
-
-
-
-
 
 
 
@@ -696,8 +688,10 @@
         </div>
 
 
+      
         <div class="footer">
             <div class="row" style="width: 77%;margin: 0 auto;position: relative;">
+            
                 <div class="jns">
                     <div>
                         <p class="jns2">技能树——改变你我</p>
@@ -727,7 +721,7 @@
                     </div>
 
                     <div>
-                        <p class="po"></p>
+                        <p style="color：#26a26f;opacity: 0;">桌游精灵</p>
                         <a class="xhx" href="">
                             <p>最强IT训练营</p>
                         </a>
@@ -745,26 +739,10 @@
             </div>
 
             <div class="end1">
-                <span class="end2">Copyright@2015技术树www.jnshu.com&nbsp;All Rights&nbsp;Reserved&nbsp;|京ICP备13005880号</span>
+                <span class="end2">Copyright@2015技术树www.jnshu.com&nbsp;All
+                    Rights&nbsp;Reserved&nbsp;|京ICP备13005880号</span>
             </div>
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     </div>
