--- a/css/task8/task3.html
+++ b/css/task8/task3.html
@@ -23,7 +23,6 @@
 <body>
     <div class="container-fluid">
         <!--盒子开始-->
-
         <div class="header">
             <!--页眉开始-->
             <span>客服热线：010-594-78634</span>
@@ -45,10 +44,6 @@
                     </button>
 
                 </div>
-
-
-
-
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
@@ -64,10 +59,7 @@
                             <a class="nav-link" href="#">关&nbsp;于</a>
                         </li>
                     </ul>
-
-
                 </div>
-
             </div>
         </nav> <!-- 导航栏结束-->
 
@@ -76,7 +68,7 @@
         </div>
 
         <div class="box">
-            <span style="color: #999999;">方向&nbsp;：</span>
+            <span   class="fx">方向&nbsp;：</span>
             <div class="text">
                 <span>全部</span>
                 <span><a class="tz" href="#qd" style="text-decoration: none;color: black;">前端开发</a></span>
@@ -92,11 +84,27 @@
         </div>
         <div class="row one">
             <div class="col-1-3 col-sm-1-3 col-lg-1-3 list">
-                <div class="cover"></div>
-                <table>
-                    <tbody>
+                    <div class="pg">
+                            <div class="ios">
+                            <p><strong>iOS工程师</strong></p>
+                            <span class="zt">
+                                iOS是由苹果公司开发的移动操作统，<br>
+                                iOS与苹果的Mac&nbsp;OS&nbsp;X操作系统一样，<br>
+                                也是以Darwin为基础的，因此同样属<br>
+                                于类Unix的商业操作系统，国内iOS开<br>
+                                发起步相对较晚，人才培养机制更是远<br>
+                                远跟不上市场发展速度。有限的iOS开<br>
+                                发人才成了国内企业必争的资源。国内<br>
+                                iOS开发起步相对较晚，人才培养机制<br>
+                                更是远远跟不上市场发展速度。有限的<br>
+                                iOS开发人才成了国内企业必争的资源。<br>
+                            </span>
+                            </div>
+                            </div>
+                         <table>
+                       <tbody>
                         <tr>
-                            <td colspan="12" style="padding-right: 0;">
+                            <td colspan="12" style="padding-right: 17px;">
                                 <img class="tx" src="./img/cs.png">
                                 <p class="bt"><strong>Web前端开发工程师</strong></p>
                                 <span
@@ -148,11 +156,27 @@
 
 
             <div class="col-1-3 col-sm-1-3 col-lg-1-3 list">
-                    <div class="cover"></div>
+                    <div class="pg">
+                            <div class="ios">
+                            <p><strong>iOS工程师</strong></p>
+                            <span class="zt">
+                                iOS是由苹果公司开发的移动操作统，<br>
+                                iOS与苹果的Mac&nbsp;OS&nbsp;X操作系统一样，<br>
+                                也是以Darwin为基础的，因此同样属<br>
+                                于类Unix的商业操作系统，国内iOS开<br>
+                                发起步相对较晚，人才培养机制更是远<br>
+                                远跟不上市场发展速度。有限的iOS开<br>
+                                发人才成了国内企业必争的资源。国内<br>
+                                iOS开发起步相对较晚，人才培养机制<br>
+                                更是远远跟不上市场发展速度。有限的<br>
+                                iOS开发人才成了国内企业必争的资源。<br>
+                            </span>
+                            </div>
+                            </div>
                 <table>
                     <tbody>
                         <tr>
-                            <td colspan="12" style="padding-right: 0;">
+                            <td colspan="12" style="padding-right: 17px;">
                                 <img class="tx" src="./img/cs.png">
                                 <p class="bt"><strong>Web前端开发工程师</strong></p>
                                 <span
@@ -203,11 +227,27 @@
             </div>
 
             <div class="col-1-3 col-sm-1-3 col-lg-1-3 list">
-                    <div class="cover"></div>
+                                       <div class="pg">
+                            <div class="ios">
+                            <p><strong>iOS工程师</strong></p>
+                            <span class="zt">
+                                iOS是由苹果公司开发的移动操作统，<br>
+                                iOS与苹果的Mac&nbsp;OS&nbsp;X操作系统一样，<br>
+                                也是以Darwin为基础的，因此同样属<br>
+                                于类Unix的商业操作系统，国内iOS开<br>
+                                发起步相对较晚，人才培养机制更是远<br>
+                                远跟不上市场发展速度。有限的iOS开<br>
+                                发人才成了国内企业必争的资源。国内<br>
+                                iOS开发起步相对较晚，人才培养机制<br>
+                                更是远远跟不上市场发展速度。有限的<br>
+                                iOS开发人才成了国内企业必争的资源。<br>
+                            </span>
+                            </div>
+                            </div>
                 <table>
                     <tbody>
                         <tr>
-                            <td colspan="12" style="padding-right: 0;">
+                            <td colspan="12" style="padding-right: 17px;">
                                 <img class="tx" src="./img/cs.png">
                                 <p class="bt"><strong>Web前端开发工程师</strong></p>
                                 <span
@@ -265,11 +305,27 @@
 
         <div class="row one1">
             <div class="col-1-3 col-sm-1-3 col-lg-1-3 list">
-                    <div class="cover"></div>
+                    <div class="pg">
+                            <div class="ios">
+                            <p><strong>iOS工程师</strong></p>
+                            <span class="zt">
+                                iOS是由苹果公司开发的移动操作统，<br>
+                                iOS与苹果的Mac&nbsp;OS&nbsp;X操作系统一样，<br>
+                                也是以Darwin为基础的，因此同样属<br>
+                                于类Unix的商业操作系统，国内iOS开<br>
+                                发起步相对较晚，人才培养机制更是远<br>
+                                远跟不上市场发展速度。有限的iOS开<br>
+                                发人才成了国内企业必争的资源。国内<br>
+                                iOS开发起步相对较晚，人才培养机制<br>
+                                更是远远跟不上市场发展速度。有限的<br>
+                                iOS开发人才成了国内企业必争的资源。<br>
+                            </span>
+                            </div>
+                            </div>
                 <table>
                     <tbody>
                         <tr>
-                            <td colspan="12" style="padding-right: 0;">
+                            <td colspan="12" style="padding-right: 17px;">
                                 <img class="tx" src="./img/cs.png">
                                 <p class="bt"><strong>Web前端开发工程师</strong></p>
                                 <span
@@ -321,11 +377,27 @@
 
 
             <div class="col-1-3 col-sm-1-3 col-lg-1-3 list1">
-                    <div class="cover"></div>
+                    <div class="pg">
+                            <div class="ios">
+                            <p><strong>iOS工程师</strong></p>
+                            <span class="zt">
+                                iOS是由苹果公司开发的移动操作统，<br>
+                                iOS与苹果的Mac&nbsp;OS&nbsp;X操作系统一样，<br>
+                                也是以Darwin为基础的，因此同样属<br>
+                                于类Unix的商业操作系统，国内iOS开<br>
+                                发起步相对较晚，人才培养机制更是远<br>
+                                远跟不上市场发展速度。有限的iOS开<br>
+                                发人才成了国内企业必争的资源。国内<br>
+                                iOS开发起步相对较晚，人才培养机制<br>
+                                更是远远跟不上市场发展速度。有限的<br>
+                                iOS开发人才成了国内企业必争的资源。<br>
+                            </span>
+                            </div>
+                            </div>
                 <table>
                     <tbody>
                         <tr>
-                            <td colspan="12" style="padding-right: 0;">
+                            <td colspan="12" style="padding-right: 17px;">
                                 <img class="tx" src="./img/cs.png">
                                 <p class="bt"><strong>Web前端开发工程师</strong></p>
                                 <span
@@ -376,11 +448,27 @@
             </div>
 
             <div class="col-1-3 col-sm-1-3 col-lg-1-3 list1 ">
-                    <div class="cover"></div>
+                    <div class="pg">
+                            <div class="ios">
+                            <p><strong>iOS工程师</strong></p>
+                            <span class="zt">
+                                iOS是由苹果公司开发的移动操作统，<br>
+                                iOS与苹果的Mac&nbsp;OS&nbsp;X操作系统一样，<br>
+                                也是以Darwin为基础的，因此同样属<br>
+                                于类Unix的商业操作系统，国内iOS开<br>
+                                发起步相对较晚，人才培养机制更是远<br>
+                                远跟不上市场发展速度。有限的iOS开<br>
+                                发人才成了国内企业必争的资源。国内<br>
+                                iOS开发起步相对较晚，人才培养机制<br>
+                                更是远远跟不上市场发展速度。有限的<br>
+                                iOS开发人才成了国内企业必争的资源。<br>
+                            </span>
+                            </div>
+                            </div>
                 <table>
                     <tbody>
                         <tr>
-                            <td colspan="12" style="padding-right: 0;">
+                            <td colspan="12" style="padding-right: 17px;">
                                 <img class="tx" src="./img/cs.png">
                                 <p class="bt"><strong>Web前端开发工程师</strong></p>
                                 <span
@@ -431,11 +519,27 @@
             </div>
 
             <div class="col-1-3 col-sm-1-3 col-lg-1-3 list">
-                    <div class="cover"></div>
+                    <div class="pg">
+                            <div class="ios">
+                            <p><strong>iOS工程师</strong></p>
+                            <span class="zt">
+                                iOS是由苹果公司开发的移动操作统，<br>
+                                iOS与苹果的Mac&nbsp;OS&nbsp;X操作系统一样，<br>
+                                也是以Darwin为基础的，因此同样属<br>
+                                于类Unix的商业操作系统，国内iOS开<br>
+                                发起步相对较晚，人才培养机制更是远<br>
+                                远跟不上市场发展速度。有限的iOS开<br>
+                                发人才成了国内企业必争的资源。国内<br>
+                                iOS开发起步相对较晚，人才培养机制<br>
+                                更是远远跟不上市场发展速度。有限的<br>
+                                iOS开发人才成了国内企业必争的资源。<br>
+                            </span>
+                            </div>
+                            </div>
                 <table>
                     <tbody>
                         <tr>
-                            <td colspan="12" style="padding-right: 0;">
+                            <td colspan="12" style="padding-right: 17px;">
                                 <img class="tx" src="./img/cs.png">
                                 <p class="bt"><strong>Web前端开发工程师</strong></p>
                                 <span
@@ -486,11 +590,27 @@
             </div>
 
             <div class="col-1-3 col-sm-1-3 col-lg-1-3 list1">
-                    <div class="cover"></div>
+                    <div class="pg">
+                            <div class="ios">
+                            <p><strong>iOS工程师</strong></p>
+                            <span class="zt">
+                                iOS是由苹果公司开发的移动操作统，<br>
+                                iOS与苹果的Mac&nbsp;OS&nbsp;X操作系统一样，<br>
+                                也是以Darwin为基础的，因此同样属<br>
+                                于类Unix的商业操作系统，国内iOS开<br>
+                                发起步相对较晚，人才培养机制更是远<br>
+                                远跟不上市场发展速度。有限的iOS开<br>
+                                发人才成了国内企业必争的资源。国内<br>
+                                iOS开发起步相对较晚，人才培养机制<br>
+                                更是远远跟不上市场发展速度。有限的<br>
+                                iOS开发人才成了国内企业必争的资源。<br>
+                            </span>
+                            </div>
+                            </div>
                 <table>
                     <tbody>
                         <tr>
-                            <td colspan="12" style="padding-right: 0;">
+                            <td colspan="12" style="padding-right: 17px;">
                                 <img class="tx" src="./img/cs.png">
                                 <p class="bt"><strong>Web前端开发工程师</strong></p>
                                 <span
@@ -549,11 +669,27 @@
 
         <div class="row one">
             <div class="col-1-3 col-sm-1-3 col-lg-1-3 list">
-                    <div class="cover"></div>
+                    <div class="pg">
+                            <div class="ios">
+                            <p><strong>iOS工程师</strong></p>
+                            <span class="zt">
+                                iOS是由苹果公司开发的移动操作统，<br>
+                                iOS与苹果的Mac&nbsp;OS&nbsp;X操作系统一样，<br>
+                                也是以Darwin为基础的，因此同样属<br>
+                                于类Unix的商业操作系统，国内iOS开<br>
+                                发起步相对较晚，人才培养机制更是远<br>
+                                远跟不上市场发展速度。有限的iOS开<br>
+                                发人才成了国内企业必争的资源。国内<br>
+                                iOS开发起步相对较晚，人才培养机制<br>
+                                更是远远跟不上市场发展速度。有限的<br>
+                                iOS开发人才成了国内企业必争的资源。<br>
+                            </span>
+                            </div>
+                            </div>
                 <table>
                     <tbody>
                         <tr>
-                            <td colspan="12" style="padding-right: 0;">
+                            <td colspan="12" style="padding-right: 17px;">
                                 <img class="tx" src="./img/cs.png">
                                 <p class="bt"><strong>Web前端开发工程师</strong></p>
                                 <span
@@ -605,11 +741,27 @@
 
 
             <div class="col-1-3 col-sm-1-3 col-lg-1-3 list">
-                    <div class="cover"></div>
+                    <div class="pg">
+                            <div class="ios">
+                            <p><strong>iOS工程师</strong></p>
+                            <span class="zt">
+                                iOS是由苹果公司开发的移动操作统，<br>
+                                iOS与苹果的Mac&nbsp;OS&nbsp;X操作系统一样，<br>
+                                也是以Darwin为基础的，因此同样属<br>
+                                于类Unix的商业操作系统，国内iOS开<br>
+                                发起步相对较晚，人才培养机制更是远<br>
+                                远跟不上市场发展速度。有限的iOS开<br>
+                                发人才成了国内企业必争的资源。国内<br>
+                                iOS开发起步相对较晚，人才培养机制<br>
+                                更是远远跟不上市场发展速度。有限的<br>
+                                iOS开发人才成了国内企业必争的资源。<br>
+                            </span>
+                            </div>
+                            </div>
                 <table>
                     <tbody>
                         <tr>
-                            <td colspan="12" style="padding-right: 0;">
+                            <td colspan="12" style="padding-right: 17px;">
                                 <img class="tx" src="./img/cs.png">
                                 <p class="bt"><strong>Web前端开发工程师</strong></p>
                                 <span
@@ -660,11 +812,27 @@
             </div>
 
             <div class="col-1-3 col-sm-1-3 col-lg-1-3 list">
-                    <div class="cover"></div>
+                    <div class="pg">
+                            <div class="ios">
+                            <p><strong>iOS工程师</strong></p>
+                            <span class="zt">
+                                iOS是由苹果公司开发的移动操作统，<br>
+                                iOS与苹果的Mac&nbsp;OS&nbsp;X操作系统一样，<br>
+                                也是以Darwin为基础的，因此同样属<br>
+                                于类Unix的商业操作系统，国内iOS开<br>
+                                发起步相对较晚，人才培养机制更是远<br>
+                                远跟不上市场发展速度。有限的iOS开<br>
+                                发人才成了国内企业必争的资源。国内<br>
+                                iOS开发起步相对较晚，人才培养机制<br>
+                                更是远远跟不上市场发展速度。有限的<br>
+                                iOS开发人才成了国内企业必争的资源。<br>
+                            </span>
+                            </div>
+                            </div>
                 <table>
                     <tbody>
                         <tr>
-                            <td colspan="12" style="padding-right: 0;">
+                            <td colspan="12" style="padding-right: 17px;">
                                 <img class="tx" src="./img/cs.png">
                                 <p class="bt"><strong>Web前端开发工程师</strong></p>
                                 <span
@@ -723,11 +891,27 @@
 
         <div class="row one">
             <div class="col-1-3 col-sm-1-3 col-lg-1-3 list">
-                    <div class="cover"></div>
+                    <div class="pg">
+                            <div class="ios">
+                            <p><strong>iOS工程师</strong></p>
+                            <span class="zt">
+                                iOS是由苹果公司开发的移动操作统，<br>
+                                iOS与苹果的Mac&nbsp;OS&nbsp;X操作系统一样，<br>
+                                也是以Darwin为基础的，因此同样属<br>
+                                于类Unix的商业操作系统，国内iOS开<br>
+                                发起步相对较晚，人才培养机制更是远<br>
+                                远跟不上市场发展速度。有限的iOS开<br>
+                                发人才成了国内企业必争的资源。国内<br>
+                                iOS开发起步相对较晚，人才培养机制<br>
+                                更是远远跟不上市场发展速度。有限的<br>
+                                iOS开发人才成了国内企业必争的资源。<br>
+                            </span>
+                            </div>
+                            </div>
                 <table>
                     <tbody>
                         <tr>
-                            <td colspan="12" style="padding-right: 0;">
+                            <td colspan="12" style="padding-right: 17px;">
                                 <img class="tx" src="./img/cs.png">
                                 <p class="bt"><strong>Web前端开发工程师</strong></p>
                                 <span
@@ -811,7 +995,7 @@
                     </div>
 
                     <div>
-                        <p class="po"></p>
+                        <p style="color：#26a26f;opacity: 0;">桌游精灵</p>
                         <a class="xhx" href="">
                             <p>最强IT训练营</p>
                         </a>
