--- a/css/task8/task1.html
+++ b/css/task8/task1.html
@@ -104,7 +104,7 @@
             <div class="col-12 col-sm-6 col-lg-3 s1">
                 <div>
                     <div class="box">
-                        <img class="icon" src="./img/rocket.png" style="margin-top: 20px;">
+                        <img class="icon" src="./img/rocket.png">
                         <h5>高效</h5>
                         <p>将五到七年的成长和时间，缩短到一年到三年。</p>
                     </div>
@@ -116,7 +116,7 @@
                     <div class="box">
                         <img class="icon" src="./img/book.png">
                         <h5>规范</h5>
-                        <p>标准的实战教程，不会走弯路</p>
+                        <p class="tzx">标准的实战教程，不会走弯路</p>
                     </div>
                 </div>
             </div>
@@ -124,9 +124,9 @@
             <div class="col-12 col-sm-6 col-lg-3 s1">
                 <div>
                     <div  class="box">
-                        <img class="icon" src="./img/gps.png" style="margin-top: 20px;">
+                        <img class="icon" src="./img/gps.png">
                         <h5>人脉</h5>
-                        <p>同班好友，同院学长，技术大师，入学就混入职脉圈，为以后铺平道路。</p>
+                        <p class="kda">同班好友，同院学长，技术大师，入学就混入职脉圈，为以后铺平道路。</p>
                     </div>
                 </div>
             </div>
