--- a/css/task8/task3.html
+++ b/css/task8/task3.html
@@ -47,13 +47,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">首&nbsp;页</a>
+                            <a class="nav-link" href="https://zhuchunyu1995.github.io/xzy/css/task8/task1.html#qd">首&nbsp;页</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">职&nbsp;业</a>
+                            <a class="nav-link" href="https://zhuchunyu1995.github.io/xzy/css/task8/task3.html#qd">职&nbsp;业</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">推&nbsp;荐</a>
+                            <a class="nav-link" href="https://zhuchunyu1995.github.io/xzy/css/task8/task2.html#qd">推&nbsp;荐</a>
                         </li>
                         <li class="nav-item active">
                             <a class="nav-link" href="#">关&nbsp;于</a>
